--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"process": false
 	},
 	"devDependencies": {
+		"@types/mathjs": "^9.4.2",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"parcel": "^2.12.0",
@@ -16,6 +17,7 @@
 	},
 	"dependencies": {
 		"@types/papaparse": "^5.3.14",
+		"mathjs": "^13.0.3",
 		"papaparse": "^5.4.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
